--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.541.0",
     "motion": "^12.23.12",
-    "next": "15.5.0",
+    "next": "^15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "recharts": "^3.1.2",
